<resources>
    <string name="app_name">GreenLight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_text">Save The Planet. The change is in you</string>
    <string name="first_name_input">First name..</string>
    <string name="last_name_input">Last name…</string>
    <string name="username_input">giovani2298…</string>
    <string name="info_splash_screen_text">Help nation to save the planet</string>
    <string name="app_name_text">GreenLight</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Create an Account</string>
    <string name="password_input">**********</string>
    <string name="login_button_text">Login</string>
    <string name="sign_in_dont_have_account">Don\'t have an account? Click Here..</string>
    <string name="username">Username...</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiY2doZW9yZ2hlZHJhZ29zIiwiYSI6ImNsZTVsbm5vajBlYnkzb3FkZWRhOGZjNm8ifQ.Z_M7Vl01-g3KZW2IGM_LyA</string>
    <string name="title_activity_green_light_acitivty">GreenLightAcitivty</string>
    <string name="text_example">Text Example</string>
    <string name="close_x">X</string>
    <string name="report_incident_info">What happened? \nUpdate the map..</string>
    <string name="describe_what_happened">Describe what happened..</string>
    <string name="write_here_text">Write here..</string>
    <string name="add_photos_incident_description">Add photos</string>
    <string name="add_new_barcode">Add new Barcode</string>
    <string name="add_new_company">Add new Company</string>
    <string-array name="categories">
        <item>metal</item>
        <item>plastic</item>
        <item>glass</item>
    </string-array>
    <string name="fire_notification_action">com.ciurezu.gheorghe.dragos.greenlight.FIRE_NOTIFICATION</string>
    <string name="description_lorem">description isescription isescription isescription isescription isescription isescription isescription is</string>
    <string name="save_planet_string">Save the Planet. The change is in you</string>
    <string name="recycle_to_help_us_you_will_receive_virtual_money">Recycle to help us. You will receive virtual money</string>
    <string name="report_incident_to_the_map_or_find_these_recyclers_bin">Report incident to the map or find these recyclers bin</string>
</resources>