<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_1"
    tools:context=".presentation.app.map.view.FragmentReportIncident">


    <!-- image -->
    <androidx.cardview.widget.CardView
        android:id="@+id/report_incident_cardview_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_rep_incident"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:src="@drawable/ic_trash" />
    </androidx.cardview.widget.CardView>


    <!-- Description -->
    <androidx.cardview.widget.CardView
        android:id="@+id/report_incident_cardview_description"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:elevation="1dp"
        app:cardCornerRadius="@dimen/middle_radius_dimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_incident_cardview_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_gray">

            <!-- Info text -->
            <androidx.cardview.widget.CardView
                android:id="@+id/report_incident_cardview_info"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/very_small_margin"
                        android:layout_marginEnd="@dimen/very_small_margin"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/describe_what_happened"
                        android:textAlignment="center"
                        android:textSize="@dimen/normal_high_text_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!-- Edit text for the description-->
            <EditText
                android:id="@+id/report_incident_editText_info"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/very_small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/very_small_margin"
                android:autofillHints="name"
                android:background="#00000000"
                android:gravity="top"
                android:hint="@string/write_here_text"
                android:inputType="text"
                android:textSize="@dimen/normal_high_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/report_incident_cardview_info" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <!-- Add photo -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        app:cardCornerRadius="@dimen/middle_radius_dimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_incident_cardview_description">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_gray">

            <!-- Info text -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView9"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/very_small_margin"
                    android:layout_marginRight="@dimen/very_small_margin"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/add_photos_incident_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/normal_high_text_size"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photo_incident_rv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView9" />

            <ImageView
                android:id="@+id/add_photos"
                android:layout_width="50dp"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!-- Reject Button -->
    <androidx.cardview.widget.CardView
        android:id="@+id/report_incident_decline"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/very_small_margin"
        app:cardCornerRadius="@dimen/large_ariuds_dimen"
        app:layout_constraintEnd_toStartOf="@+id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_decline" />
    </androidx.cardview.widget.CardView>
    <!-- Accept Button -->
    <androidx.cardview.widget.CardView
        android:id="@+id/report_incident_aprove"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/very_small_margin"
        android:layout_marginTop="@dimen/small_margin"
        app:cardCornerRadius="@dimen/large_ariuds_dimen"
        app:cardElevation="0dp"
        app:layout_constraintStart_toEndOf="@+id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_aprove" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>